--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>准奎兴趣圈</title>
+    <title>兴趣圈</title>
 </head>
 <style>
     body {
@@ -12,13 +12,11 @@
         margin: 0;
         padding: 0;
         overflow: auto;
-
         background-image: linear-gradient(45deg, #b19edc, #d2e9ff);
-
     }
 </style>
 <body>
 <div id="root"></div>
-<script type="module" src="./src/main.jsx"></script>
+<script type="module" src="./src/xqq_main_page.jsx"></script>
 </body>
 </html>
