--- a/frontend/xqq_choose.html
+++ b/frontend/xqq_choose.html
@@ -11,7 +11,7 @@
         padding: 0;
         overflow: auto;
         background-image: linear-gradient(45deg, #c8e0ea, #fde3ff);
-
+        background-size: cover;
     }
 </style>
 <body>
