--- a/frontend/mylike.html
+++ b/frontend/mylike.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>我的帖子</title>
+    <title>我的点赞</title>
 </head>
 <style>
     body {
@@ -10,7 +10,7 @@
         margin: 0;
         padding: 0;
         overflow: auto;
-        background-image: linear-gradient(45deg, #c2d8ea, #fde3ff);
+        background-image: linear-gradient(45deg, #b19edc, #fbefff);
         justify-content: center;
         align-items: center;
         display: flex;
@@ -18,6 +18,6 @@
 </style>
 <body>
 <div id="root"></div>
-<script type="module" src="./src/mypost_page.jsx"></script>
+<script type="module" src="./src/mylike_page.jsx"></script>
 </body>
 </html>
