--- a/frontend/others_comment.html
+++ b/frontend/others_comment.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>我的帖子</title>
+    <title>评论我的</title>
 </head>
 <style>
     body {
@@ -10,7 +10,7 @@
         margin: 0;
         padding: 0;
         overflow: auto;
-        background-image: linear-gradient(45deg, #c2d8ea, #fde3ff);
+        background-image: linear-gradient(45deg, #d2e9ff, #9ac6e8);
         justify-content: center;
         align-items: center;
         display: flex;
@@ -18,6 +18,6 @@
 </style>
 <body>
 <div id="root"></div>
-<script type="module" src="./src/mypost_page.jsx"></script>
+<script type="module" src="./src/others_comment_page.jsx"></script>
 </body>
 </html>
